--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
 <body>
 
   <div class="grid island-1-2">
-    <div class="unit xs-1 s-1 m-1-2 l-1-3">
+    <article class="action-card relative unit xs-1 s-1 m-1-2 l-1-3">
 
+      <header class="action-tools-top absolute">
+        <menu>
+          <li>
+            <button class="action-btn">
+              <i class="icon i-1">
+                <svg><use xlink:href="images/icons.svg#fullscreen"></use></svg>
+              </i>
+            </button>
+          </li>
+          <li>
+            <button class="action-btn">
+              <i class="icon i-1">
+                <svg><use xlink:href="images/icons.svg#download"></use></svg>
+              </i>
+            </button>
+          </li>
 
-
-    </div>
-  </div>
-
+        </menu>
+      </header>
 </body>
 </html>
