Add the picture

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
 
         </menu>
       </header>
+
+      <picture>
+  <img class="img-flex" src="images/blue-bolt-480.jpg" srcset="images/blue-bolt-975.jpg 1000w, images/blue-bolt-480.jpg 320w" sizes="(min-width: 38em) 50vw, 100vw" alt="A dinosaur attacking men">
+</picture>
 </body>
 </html>
