--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
       <picture>
   <img class="img-flex" src="images/blue-bolt-480.jpg" srcset="images/blue-bolt-975.jpg 1000w, images/blue-bolt-480.jpg 320w" sizes="(min-width: 38em) 50vw, 100vw" alt="A dinosaur attacking men">
 </picture>
+<div class="island-1-2">
+  <h2 class="push-0">Blue Bolt, Series 6D, № 4</h2>
+  <p class="push-0 pad-t-1-4">Blue Bolt, the human lightning streak, in weird & fantastic stories of the unknown.</p>
+</div>
+
 </body>
 </html>
