--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
   <p class="push-0 pad-t-1-4">Blue Bolt, the human lightning streak, in weird & fantastic stories of the unknown.</p>
 </div>
 
+    <footer class="action-tools-bottom">
+
+    </footer>
 </body>
 </html>
