Add the first li

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 </div>
 
     <footer class="action-tools-bottom">
+      <menu class="pad-b-1-2">
+        <li>
+          <button class="btn action-btn">
+            <i class="icon i-1">
+              <svg><use xlink:href="images/icons.svg#heart"></use></svg>
+            </i>
+          </button>
+        </li>
 
     </footer>
 </body>
