Add the second li

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
             </i>
           </button>
         </li>
-
+        <li>
+          <button class="btn action-btn">
+            <i class="icon i-1">
+              <svg><use xlink:href="images/icons.svg#share"></use></svg>
+            </i>
+          </button>
+        </li>
     </footer>
 </body>
 </html>
