Add the third li

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             </i>
           </button>
         </li>
+        <li>
+  <button class="btn action-btn">
+    <i class="icon i-1">
+      <svg><use xlink:href="images/icons.svg#comment"></use></svg>
+    </i>
+  </button>
+</li>
+</menu>
     </footer>
 </body>
 </html>
